[package]
name = "fancy_sort"
version = "0.1.2"
edition = "2021"
authors = ["Bastian Asmussen <bastianasmussen@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Implementations of different sorting algorithms in Rust!"
repository = "https://github.com/BastianAsmussen/fancy_sort"

[dependencies]
rand = "0.8.5"
